corrijo márgenes y agrego salto de línea automático en observaciones para PDFs